DesignProject/tests/error/test06.src
// function call with wrong number of arguments
func testAdd(a : integer, b : integer) -> integer {
    local result : integer;
    result := a + b;
    return(result);
}

func test() -> void {
    local sum : integer;
    sum := testAdd(5);
    write(sum);
}

